# Nuru-QQBot

./: .dockerignore  .env.example  AGENTS.md  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
src/plugins/handle/: __init__.py
src/plugins/nuru_chat/: __init__.py  api.py  awareness.py  config.py  language.py  media.py  memory.py  moderation.py  mood.py  observability.py  personality.py  plugin.py  queue.py  reflection.py  refusal.py  rules.py  tools.py  working_memory.py
tests/: test_api.py  test_awareness.py  test_media.py  test_memory.py  test_mood.py  test_observability.py  test_queue.py  test_reflection.py  test_rules.py  test_tools.py
